@@ -37,5 +37,6 @@ extern mpz_t* divisor_list(int* ndivisors, mpz_t n);
 extern int is_smooth(mpz_t n, mpz_t k);
 extern int is_rough(mpz_t n, mpz_t k);
 extern int is_powerful(mpz_t n, uint32_t k);
+extern int is_almost_prime(uint32_t k, mpz_t n);
 
 #endif
